[metadata]
name = repo-insights
version = 0.0.4
author = yuizho
author_email = yuizho3@gmail.com
description = A CLI tool to get Release Frequency and Lead Time for Changes by GitHub repository activity.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuizho/repo-insights
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    repo-insights = repoinsights.main:main

# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:
install_requires =
    yaspin
    click
    gql ==v2.0.0
python_requires = >=3.7

[options.packages.find]
where=src
